src/test/success/print_boolean_var.egern
var a = false
var b = true

print(a)
print(b)