src/test/fail/comparison_expressions_fail.egern
print(true == 3);
print(3 == false);

print(true != 3);
print(3 != false);

print(true <= 3);
print(3 <= false);

print(true >= 3);
print(3 >= false);

print(true < 3);
print(3 < false);

print(true > 3);
print(3 > false);
